# qcardia

./: .gitignore  README.md  pyproject.toml  run.py  utils.py
infer_LA/: README.md  run_LA.py  utils_viz.py
results/combined_perfusion/: CardiSorted_QLGE70__REST.csv  CardiSorted_QLGE70__REST_fits1.npy  CardiSorted_QLGE70__REST_fits2.npy  CardiSorted_QLGE70__REST_fits3.npy  CardiSorted_QLGE70__STRESS_3sl.csv  CardiSorted_QLGE70__STRESS_3sl_fits1.npy  CardiSorted_QLGE70__STRESS_3sl_fits2.npy  CardiSorted_QLGE70__STRESS_3sl_fits3.npy  CardiSorted_QLGE71__stressqPERFsTFE_3sl.csv  CardiSorted_QLGE71__stressqPERFsTFE_3sl_fits1.npy  CardiSorted_QLGE71__stressqPERFsTFE_3sl_fits2.npy  CardiSorted_QLGE71__stressqPERFsTFE_3sl_fits3.npy  CardiSorted_QLGE72__rest.csv  CardiSorted_QLGE72__rest_fits1.npy  CardiSorted_QLGE72__rest_fits2.npy  CardiSorted_QLGE72__rest_fits3.npy  CardiSorted_QLGE72__stress.csv  CardiSorted_QLGE72__stress_fits1.npy  CardiSorted_QLGE72__stress_fits2.npy  CardiSorted_QLGE72__stress_fits3.npy  CardiSorted_QLGE73__RESTqPERFsTFE_3sl.csv  CardiSorted_QLGE73__RESTqPERFsTFE_3sl_fits1.npy  CardiSorted_QLGE73__RESTqPERFsTFE_3sl_fits2.npy  CardiSorted_QLGE73__RESTqPERFsTFE_3sl_fits3.npy  CardiSorted_QLGE73__STRESSqPERFsTFE_3sl.csv  CardiSorted_QLGE73__STRESSqPERFsTFE_3sl_fits1.npy  CardiSorted_QLGE73__STRESSqPERFsTFE_3sl_fits2.npy  CardiSorted_QLGE73__STRESSqPERFsTFE_3sl_fits3.npy  CardiSorted_QLGE74__REST.csv  CardiSorted_QLGE74__REST_fits1.npy  CardiSorted_QLGE74__REST_fits2.npy  CardiSorted_QLGE74__REST_fits3.npy  CardiSorted_QLGE74__STRESS.csv  (+131 more)
(+5 files in other folders)
